--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -4216,3 +4216,36 @@ html {
     }
   }
 }
+.fc .fc-col-header-cell-cushion,
+.fc .fc-daygrid-day-number {
+  color: #000;
+}
+.modal-notice {
+  overflow: hidden;
+  .modal-dialog {
+    max-width: 100%;
+    height: 100%;
+    margin: 0;
+    transform: none !important;
+  }
+  .modal-content {
+    height: 100%;
+    padding: 16px 24px;
+    border: 1px solid #ddd;
+  }
+  .modal-header {
+    padding: 0 0 8px 0;
+  }
+  .modal-title {
+    font-size: 20px;
+  }
+  .modal-body {
+    padding: 24px 16px;
+    overflow: auto;
+    font-size: 15px;
+  }
+  .modal-footer {
+    padding-top: 16px;
+    justify-content: space-between;
+  }
+}
