--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -19728,4 +19728,39 @@ html .swal2-hide {
   to {
     opacity: 0;
   }
+}
+
+.fc .fc-col-header-cell-cushion,
+.fc .fc-daygrid-day-number {
+  color: #000;
+}
+
+.modal-notice {
+  overflow: hidden;
+}
+.modal-notice .modal-dialog {
+  max-width: 100%;
+  height: 100%;
+  margin: 0;
+  transform: none !important;
+}
+.modal-notice .modal-content {
+  height: 100%;
+  padding: 16px 24px;
+  border: 1px solid #ddd;
+}
+.modal-notice .modal-header {
+  padding: 0 0 8px 0;
+}
+.modal-notice .modal-title {
+  font-size: 20px;
+}
+.modal-notice .modal-body {
+  padding: 24px 16px;
+  overflow: auto;
+  font-size: 15px;
+}
+.modal-notice .modal-footer {
+  padding-top: 16px;
+  justify-content: space-between;
 }/*# sourceMappingURL=common.css.map */
