--- a/assets/css/_one.scss
+++ b/assets/css/_one.scss
@@ -4222,6 +4222,15 @@ html {
 }
 .modal-notice {
   overflow: hidden;
+  @include media-breakpoint-down(xl) {
+    padding: 16px;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+  }
   .modal-dialog {
     max-width: 100%;
     height: 100%;
