--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -19738,6 +19738,17 @@ html .swal2-hide {
 .modal-notice {
   overflow: hidden;
 }
+@media (max-width: 1199.98px) {
+  .modal-notice {
+    padding: 16px;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+  }
+}
 .modal-notice .modal-dialog {
   max-width: 100%;
   height: 100%;
